--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                     <p class="projectStatus"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/clock.svg"><br>19 years old</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/globe.svg"><br>fluent:<br> Swedish, English
-                                        <br>speaks:<br> Bosnian, Croatian, Serbian</p>
+                                            src="src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span><br> Swedish, English
+                                        <br><span class="langProf">speaks:</span><br> Bosnian, Croatian, Serbian</p>
                                 </div>
                             </div>
                         </div>
