--- a/sv/settings.html
+++ b/sv/settings.html
@@ -77,11 +77,11 @@
                         <li>
                             <p>Tema</p>
                             <div>
-                                <input type="radio" id="auto" name="theme-color" value="auto" checked>
+                                <input type="radio" id="auto" name="theme-color" value="auto">
                                 <label for="auto" class="auto button">Följ systemet</label>
                                 <input type="radio" id="light" name="theme-color" value="light">
                                 <label for="light" class="light button">Ljus</label>
-                                <input type="radio" id="dark" name="theme-color" value="dark">
+                                <input type="radio" id="dark" name="theme-color" value="dark" checked>
                                 <label for="dark" class="dark button">Mörk</label>
                             </div>
                         </li>
