--- a/sv/settings.html
+++ b/sv/settings.html
@@ -80,9 +80,9 @@
                                 <input type="radio" id="auto" name="theme-color" value="auto">
                                 <label for="auto" class="auto button">Följ systemet</label>
                                 <input type="radio" id="light" name="theme-color" value="light">
-                                <label for="light" class="light button">Ljus</label>
+                                <label for="light" class="light button">Ljust</label>
                                 <input type="radio" id="dark" name="theme-color" value="dark" checked>
-                                <label for="dark" class="dark button">Mörk</label>
+                                <label for="dark" class="dark button">Mörkt</label>
                             </div>
                         </li>
                         <li>
