Wrote swedish pages

--- a/sv/projects.html
+++ b/sv/projects.html
@@ -58,18 +58,18 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Projects</h1>
+                    <h1>Projekt</h1>
                     <div>
                         <div>
                             <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland. <br>Vissa
-                                av dem är tekniska och andra är mjukvaruprojekt eller webbsidor och liknande. <br>Ta och
+                                av dem är tekniska och andra är mjukvarurelaterade eller webbsidor och liknande. <br>Ta och
                                 kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket fall så
-                                hade jag kul nr jag skapade dem!
+                                hade jag kul när jag skapade dem!
                                 <img draggable="false" class="emoji" alt="" src="../src/images/emojis/happy.svg">
                             </p>
                             <div class="project">
                                 <p class="projectName">Den där webbsidan (aridan.net)</p>
-                                <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande och min arbetslivserfarenhet. <br>Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan göra webbsidor se bra ut!</p>
+                                <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande samt min arbetslivserfarenhet. <br>Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan få webbsidor se bra ut!</p>
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
@@ -87,66 +87,56 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">Den svenska översättningen av OldTwitter</p>
-                                <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly
-                                    Twitter) look and feel like Twitter from 2015/2018. <br>I actively translate the
-                                    extension to Swedish, and I believe I'm doing a pretty decent job! You should check
-                                    it out!</p>
+                                <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så att X (tidigare Twitter) ser ut som Twitter från 2016/2018. <br>Jag behöver aktivit översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra jobb!</p>
                                 <div>
-                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/link.svg"> <a
+                                            src="../src/images/emojis/link.svg"> <a
                                             href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
                                             target="_blank">GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/teacher.svg">.json, translation and i8n technology
+                                            src="../src/images/emojis/teacher.svg"> översättnings-teknologi
                                     </p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/judge.svg"> Owned by <a href="https://dimden.dev"
+                                            src="../src/images/emojis/judge.svg"> Ägs by <a href="https://dimden.dev"
                                             target="_blank">dimden</a></p>
                                 </div>
                             </div>
                             <div class="project">
                                 <p class="projectName">iPod Video 5th Gen</p>
-                                <p class="projectDesc">I have modified this iPod with a transparent click wheel and
-                                    button along with a transparent faceplate. <br>I've also installed a larger battery
-                                    and replaced its hard drive with a microSD card.</p>
+                                <p class="projectDesc">Jag gillar att modifiera äldre iPods. Denna iPod har jag lagt en genomskinlig framsida samt klickhjul på.<br>Dessutom så bytte jag utt batteriet mot en större variant och bytte ut hårddisken med ett SD kort.</p>
                                 <div>
-                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectStatus completed">Färdigt</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                            src="../src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
                                 </div>
                             </div>
                             <div class="project">
                                 <p class="projectName">iPod Click Wheel 4th Gen</p>
-                                <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've
-                                    also upgraded it by replacing its hard drive with a Compact Flash card and I
-                                    installed a new battery too.</p>
-                                <div>
-                                    <p class="projectStatus completed">Completed</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
-                                </div>
+                                <p class="projectDesc">Denna iPod bytte jag ut klickhjuet på, samt så bytte jag ut batteriet och uppgraderade den till ett SD kort istället för en hårddisk.</p>
+                                    <div>
+                                        <p class="projectStatus completed">Färdigt</p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="../src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
+                                    </div>
                             </div>
                             <div class="project">
                                 <p class="projectName">iPod Mini 2nd Gen </p>
-                                <p class="projectDesc">I've also upgraded this iPod by replacing its hard drive with a
-                                    Compact Flash card and I installed a new battery too.</p>
-                                <div>
-                                    <p class="projectStatus completed">Completed</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
-                                </div>
+                                <p class="projectDesc">Denna iPod modifierade jag med ett nytt batteri och ett Compact Flash kort. <br>Visste du att iPod mini serien använder Microdrives, en hårddiskstandard som har exakt samma kontakter som Compact Flash?</p>
+                                    <div>
+                                        <p class="projectStatus completed">Färdigt</p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="../src/images/emojis/teacher.svg"> Modifiering av elektronik</p>
+                                    </div>
                             </div>
                             <div class="project">
-                                <p class="projectName">Hackintoshing a PC</p>
-                                <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
-                                    hardware. <br>I did this as a hobby project and I learned a lot about Apple
-                                    software. It was a fun project and it still works to this day!</p>
-                                <div>
-                                    <p class="projectStatus completed">Completed</p>
-                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/teacher.svg"> Software</p>
-                                </div>
+                                <p class="projectName">"Hackintoshing"</p>
+                                <p class="projectDesc">"Hackintoshing" är handligen av att installera macOS på icke-Apple hårdvara. <br>Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag lärde mig massor om hur Apples klientoperativststem fungerar. <br>Det var superkul, och den startar till macOS än idag!</p>
+                                    <div>
+                                        <p class="projectStatus completed">Färdigt</p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="../src/images/emojis/teacher.svg"> Mjukvara</p>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -156,8 +146,8 @@
     </main>
     <footer>
         <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
         </div>
     </footer>
 </body>
