--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -55,14 +55,76 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Erfarenhet</h1>
-                    <p class="checkBack">Kom tillbaka senare</p>
-                    <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du
-                        kan kopiera denna sidas källkod.</p>
+                    <h1>Experiences</h1>
+                    <div>
+                        <p class="subTitle">I am quite early in to my career, but I've always had a liking for
+                            computers, networking and websites as far as I can remember. <br>Even when I was a child, I
+                            was always intrigued how computers could do and know so much whilst being so small.<br>
+                            Therefore, I know a lot about IT for my age, and I know that I can impress with my
+                            knowledge.</p>
+                        <div class="centerer">
+                            <div class="centererItems">
+                                <a href="cv" class="cvButton">Begär CV</a>
+                                <a class="socialMedia linkedin"
+                                    href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="work" id="jobs">
+                                <p class="subTitleExp">Work Experience</p>
+                                <div class="project">
+                                    <p class="projectName">Salesperson, technician and lead web developer at IT Care
+                                        Repairstore</p>
+                                    <p class="projectDesc">This was my first job. I learned a lot during it and I can
+                                        honestly say it thought me a lot of life lessons that I needed to learn. <br>I
+                                        learned how to communicate and work as a team, how to professionally repair
+                                        technology and how to be a good salesperson.<br> It was a real thrill working
+                                        there!</p>
+                                    <div class="projectStuff">
+                                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
+                                        <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/link.svg"><br> <a
+                                                href="https://itcarestore.se" target="_blank">itcarestore.se</a></p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/teacher.svg"><br>Web Development <br>Customer
+                                            Service <br>Tech Repairs</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="education" id="education">
+                                <p class="subTitleExp">Education</p>
+                                <div class="project">
+                                    <p class="projectName">Networking and computer science student at Teknikum </p>
+                                    <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
+                                        networking in regard to routing and switching. <br>I also got to learn how to
+                                        build computers, use virtual machines, manage servers that run on Windows Server
+                                        along with a <br>basic course in cybersecurity, electronics and web development!
+                                    </p>
+                                    <div class="projectStuff">
+                                        <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
+                                                <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                    src="src/images/emojis/link.svg"><br> <a
+                                                    href="https://teknikum.se" target="_blank">teknikum.se</a></p>
+                                        <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers <br>Web
+                                            Development <br>Electronics</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
