--- a/sv/index.html
+++ b/sv/index.html
@@ -19,7 +19,7 @@
     <link rel="manifest" href="../src/favicons/site.webmanifest">
 </head>
 
-<body class="boxAlignment ">
+<body class="boxAlignment">
     <header>
         <nav>
             <div class="navWrapper">
@@ -56,13 +56,38 @@
             <div class="constructionBox">
                 <div>
                     <h1>Hem</h1>
-                    <p class="checkBack">Kom tillbaka senare</p>
-                    <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du
-                        kan kopiera denna sidas källkod.</p> 
+                    <div class="centerer">
+                        <div class="centererItems">
+                            <p>Hallå där! Välkommen till min webbsida!  Jag använder denna webbsida mestadels för att visa rekryterare mina kompetenser och min kontaktinformation.<br>Jag hoppas att du kommer att trivas här. Jag skulle ge dig några cookies (kakor) men jag respekterar din integritet, så kanske en annan gång?</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="work" id="jobs">
+                            <p class="subTitleExp">About me</p>
+                            <div class="project">
+                                <p class="projectName">Adnan Bukvic, även känd som @actuallyaridan</p>
+                                <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för gamla saker.<br> Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner och nätverk ända sedan jag var ett barn.<br>Jag är alltid uppdaterad om deras mjukvara och hårdvara. Jag gillar till och med att modifiera elektronik för att göra nya saker, som gamla kablar<br>
+                                    och tillbehör som iPods och jag kan en massa språk också!</p>
+                                <div class="projectStuff">
+                                    <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                            src="../src/images/emojis/clock.svg"><br>19 år gammal</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="../src/images/emojis/globe.svg"><br><span class="langProf">flytande:</span><br> svenska, engelska
+                                        <br><span class="langProf">pratar:</span><br> bosniska, kroatiska, serbiska</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
