--- a/experiences.html
+++ b/experiences.html
@@ -102,7 +102,7 @@
                                     <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
                                         networking in regard to routing and switching. <br>I also got to learn how to
                                         build computers, use virtual machines, manage servers that run on Windows Server
-                                        along with a <br>basic course in cybersecurity, electronics and web development!
+                                        along with a <br>basic course in network security, electronics and web development!
                                     </p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
