--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -57,11 +57,9 @@
                 <div>
                     <h1>Experiences</h1>
                     <div>
-                        <p class="subTitle">I am quite early in to my career, but I've always had a liking for
-                            computers, networking and websites as far as I can remember. <br>Even when I was a child, I
-                            was always intrigued how computers could do and know so much whilst being so small.<br>
-                            Therefore, I know a lot about IT for my age, and I know that I can impress with my
-                            knowledge.</p>
+                        <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.<br>
+                            När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta så mycket när de var så små.<br>
+                            Därmed kan jag mycket om IT trors min ålder, och jag vet att jag kan imponera med min kunskap.</p>
                         <div class="centerer">
                             <div class="centererItems">
                                 <a href="cv" class="cvButton">Begär CV</a>
@@ -71,45 +69,40 @@
                         </div>
                         <div>
                             <div class="work" id="jobs">
-                                <p class="subTitleExp">Work Experience</p>
+                                <p class="subTitleExp">arbetslivserfarenhet</p>
                                 <div class="project">
-                                    <p class="projectName">Salesperson, technician and lead web developer at IT Care
-                                        Repairstore</p>
-                                    <p class="projectDesc">This was my first job. I learned a lot during it and I can
-                                        honestly say it thought me a lot of life lessons that I needed to learn. <br>I
-                                        learned how to communicate and work as a team, how to professionally repair
-                                        technology and how to be a good salesperson.<br> It was a real thrill working
-                                        there!</p>
+                                    <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
+                                    <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
+                                        <br>Jag lärde mig hur man kommunicerar och arbetar som ett team, hur man professionellt reparerar teknik och hur man är en bra säljare.
+                                        <br>Det var riktigt spännande att jobba där!</p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
+                                                src="../src/images/emojis/clock.svg"><br>nov 2022 - okt 2023</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/link.svg"><br> <a
+                                                src="../src/images/emojis/link.svg"><br> <a
                                                 href="https://itcarestore.se" target="_blank">itcarestore.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Web Development <br>Customer
-                                            Service <br>Tech Repairs</p>
+                                                src="../src/images/emojis/teacher.svg"><br>Webbutveckling <br>
+                                            Kundbemötande <br>Tekniska reparationer</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="education" id="education">
-                                <p class="subTitleExp">Education</p>
+                                <p class="subTitleExp">Utbildning</p>
                                 <div class="project">
-                                    <p class="projectName">Networking and computer science student at Teknikum </p>
-                                    <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
-                                        networking in regard to routing and switching. <br>I also got to learn how to
-                                        build computers, use virtual machines, manage servers that run on Windows Server
-                                        along with a <br>basic course in cybersecurity, electronics and web development!
+                                    <p class="projectName">Dator- och komminikationsteknikselev på Teknikum </p>
+                                    <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom nätverkande när det gäller routing och switching.
+                                        <br>Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera servrar som körs på Windows Server tillsammans med en
+                                        <br>grundkurs i nätverkssäkernet, elektronik och webbutveckling!
                                     </p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
+                                                src="../src/images/emojis/clock.svg"><br>agu 2020 - jun 2023</p>
                                                 <p class="projectLink"><img draggable="false" class="emoji" alt=""
-                                                    src="src/images/emojis/link.svg"><br> <a
+                                                    src="../src/images/emojis/link.svg"><br> <a
                                                     href="https://teknikum.se" target="_blank">teknikum.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers <br>Web
-                                            Development <br>Electronics</p>
+                                                src="src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling <br>Elektronik</p>
                                     </div>
                                 </div>
                             </div>
