--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -102,7 +102,7 @@
                                                     src="../src/images/emojis/link.svg"><br> <a
                                                     href="https://teknikum.se" target="_blank">teknikum.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling <br>Elektronik</p>
+                                                src="../src/images/emojis/teacher.svg"><br>Nätverk <br>Datorer <br>Webbutveckling <br>Elektronik</p>
                                     </div>
                                 </div>
                             </div>
