Fixed swedish footer

--- a/sv/index.html
+++ b/sv/index.html
@@ -84,8 +84,8 @@
     </main>
     <footer>
         <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+            <p>© Copyright 2024 av Adnan Bukvic ifall inget annat anges. Projektet använder MIT licensen.</p>
+            <p>Twemoji av Twitter Inc/X Corp är licenserat under CC-BY 4.0.</p>
         </div>
     </footer>
 </body>
