--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -55,7 +55,7 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Experiences</h1>
+                    <h1>Erfarenhet</h1>
                     <div>
                         <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.<br>
                             När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta så mycket när de var så små.<br>
@@ -69,7 +69,7 @@
                         </div>
                         <div>
                             <div class="work" id="jobs">
-                                <p class="subTitleExp">arbetslivserfarenhet</p>
+                                <p class="subTitleExp">Arbetslivserfarenhet</p>
                                 <div class="project">
                                     <p class="projectName">Säljare, tekniker och webbutvecklare på IT Care Repairstore</p>
                                     <p class="projectDesc">Det här var mitt första jobb. Jag lärde mig mycket under det och jag kan ärligt säga att det lärde mig många livsläxor som jag behövde lära mig.
