--- a/sv/index.html
+++ b/sv/index.html
@@ -63,7 +63,8 @@
                     </div>
                     <div>
                         <div class="work" id="jobs">
-                            <p class="subTitleExp">About me</p>
+                            <p class="subTitleExp">Om mig
+                            </p>
                             <div class="project">
                                 <p class="projectName">Adnan Bukvic, även känd som @actuallyaridan</p>
                                 <p class="projectDesc">Jag är en kreativ kille som älskar att skapa nya lösningar för gamla saker.<br> Jag älskar att lära mig nya saker och jag har gillat datorer, telefoner och nätverk ända sedan jag var ett barn.<br>Jag är alltid uppdaterad om deras mjukvara och hårdvara. Jag gillar till och med att modifiera elektronik för att göra nya saker, som gamla kablar<br>
