--- a/sv/index.html
+++ b/sv/index.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div>
-                        <div class="work" id="jobs">
+                        <div class="work" id="me">
                             <p class="subTitleExp">Om mig
                             </p>
                             <div class="project">
