--- a/sv/experiences.html
+++ b/sv/experiences.html
@@ -59,7 +59,7 @@
                     <div>
                         <p class="subTitle">Jag är ganska tidigt in i min karriär, men jag har alltid haft ett glödande eld för datorer, nätverk och hemsidor så långt jag kan minnas.<br>
                             När jag var ett litet barn var jag alltid nyfiken på hur datorer kunde göra och veta så mycket när de var så små.<br>
-                            Därmed kan jag mycket om IT trors min ålder, och jag vet att jag kan imponera med min kunskap.</p>
+                            Därmed kan jag mycket om IT trots min ålder, och jag vet att jag kan imponera med min kunskap.</p>
                         <div class="centerer">
                             <div class="centererItems">
                                 <a href="cv" class="cvButton">Begär CV</a>
@@ -90,10 +90,10 @@
                             <div class="education" id="education">
                                 <p class="subTitleExp">Utbildning</p>
                                 <div class="project">
-                                    <p class="projectName">Dator- och komminikationsteknikselev på Teknikum </p>
+                                    <p class="projectName">Dator- och kommunikationsteknikselev på Teknikum </p>
                                     <p class="projectDesc">Under min tid på Teknikum fick jag lära mig grunderna inom nätverkande när det gäller routing och switching.
                                         <br>Jag fick också lära mig att bygga datorer, använda virtuella datorer, hantera servrar som körs på Windows Server tillsammans med en
-                                        <br>grundkurs i nätverkssäkernet, elektronik och webbutveckling!
+                                        <br>grundkurs i nätverkssäkerhet, elektronik och webbutveckling!
                                     </p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
