--- a/sv/projects.html
+++ b/sv/projects.html
@@ -87,7 +87,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">Den svenska översättningen av OldTwitter</p>
-                                <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så att X (tidigare Twitter) ser ut som Twitter från 2016/2018. <br>Jag behöver aktivit översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra jobb!</p>
+                                <p class="projectDesc">OldTwitter är ett tillägg för Chrome och Firefox som gör så att X (tidigare Twitter) ser ut som Twitter från 2016/2018. <br>Jag behöver aktivt översätta tillägget till svenska och själv tycker jag att jag gör ett ganska bra jobb!</p>
                                 <div>
                                     <p class="projectStatus WIP">Pågår</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
@@ -113,7 +113,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">iPod Click Wheel 4th Gen</p>
-                                <p class="projectDesc">Denna iPod bytte jag ut klickhjuet på, samt så bytte jag ut batteriet och uppgraderade den till ett SD kort istället för en hårddisk.</p>
+                                <p class="projectDesc">Denna iPod bytte jag ut klickhjulet på, samt så bytte jag ut batteriet och uppgraderade den till ett SD kort istället för en hårddisk.</p>
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
@@ -131,7 +131,7 @@
                             </div>
                             <div class="project">
                                 <p class="projectName">"Hackintoshing"</p>
-                                <p class="projectDesc">"Hackintoshing" är handligen av att installera macOS på icke-Apple hårdvara. <br>Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag lärde mig massor om hur Apples klientoperativststem fungerar. <br>Det var superkul, och den startar till macOS än idag!</p>
+                                <p class="projectDesc">"Hackintoshing" är att installera macOS på icke-Apple hårdvara. <br>Detta gjorde jag som ett hobbyprojekt, men samtidigt så lärde jag lärde mig massor om hur Apples klientoperativsystem fungerar. <br>Det var superkul, och den startar till macOS än idag!</p>
                                     <div>
                                         <p class="projectStatus completed">Färdigt</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
