--- a/settings.html
+++ b/settings.html
@@ -75,7 +75,7 @@
                 <div class="setting">
                     <ul>
                         <li>
-                            <p>Theme</p>
+                            <p>Theme (does not work)</p>
                             <div>
                                 <input type="radio" id="auto" name="theme-color" value="auto">
                                 <label for="auto" class="auto button">Follow system</label>
