--- a/sv/projects.html
+++ b/sv/projects.html
@@ -95,7 +95,7 @@
                                             href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
                                             target="_blank">GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="../src/images/emojis/teacher.svg"> översättnings-teknologi
+                                            src="../src/images/emojis/teacher.svg"> Översättnings-teknologi
                                     </p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
                                             src="../src/images/emojis/judge.svg"> Ägs by <a href="https://dimden.dev"
