Added experimental Discord support

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="src/scripts/settings.js"></script>
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
+    <script src="src/scripts/landyard.js"></script>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="src/favicons/apple-touch-icon.png">
     <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="/src/favicons/favicon-32x32.png">
     <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="/src/favicons/favicon-16x16.png">
@@ -92,9 +93,20 @@
                                             src="src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span><br> Swedish, English
                                         <br><span class="langProf">speaks:</span><br> Bosnian, Croatian, Serbian</p>
                                 </div>
+                                <div id="landyardDiscord">
+                                    <div id="loading">
+                                        Loading Discord activity...
+                                    </div>
+                                    <div id="loadedLandyard">
+                                        <p>Running <p id="name"></p></p>
+                                    </div>
+                                </div> 
                             </div>
+                            
                         </div>
+                        
                     </div>
+
                 </div>
             </div>
         </div>
