--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                         Loading Discord activity...
                                     </div>
                                     <div id="loadedLandyard">
-                                        <p>Running <p id="name"></p></p>
+                                        <p>Running: <p id="name"></p></p>
                                     </div>
                                 </div> 
                             </div>
