Added it's own section for the future

--- a/index.html
+++ b/index.html
@@ -93,21 +93,22 @@
                                             src="src/images/emojis/globe.svg"><br><span class="langProf">fluent:</span><br> Swedish, English
                                         <br><span class="langProf">speaks:</span><br> Bosnian, Croatian, Serbian</p>
                                 </div>
-                                <div id="landyardDiscord">
-                                    <div id="loading">
-                                        Loading Discord activity...
-                                    </div>
-                                    <div id="loadedLandyard">
-                                        <p>Running: <p id="name"></p></p>
-                                    </div>
-                                </div> 
-                            </div>
-                            
                         </div>
                         
                     </div>
-
                 </div>
+            </div>
+            <div class="project">
+                <div id="landyardDiscord">
+                    <p>Discord activity</p>
+                        <div id="loading">
+                            Loading Discord activity...
+                        </div>
+                        <div id="loadedLandyard">
+                            <p>Running: <p id="name"></p></p>
+                        </div>
+                    </div> 
+                </div> 
             </div>
         </div>
     </main>
