Added status info

--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
                             Loading Discord activity...
                         </div>
                         <div id="loadedLandyard">
-                            <p>Running: <p id="name"></p></p>
+                            <p id="discordStatus"></p>
+                            <p id="activities"></p></p>
                         </div>
                     </div> 
                 </div> 
