Added online or offline tag

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                             Loading Discord activity...
                         </div>
                         <div id="loadedLandyard">
-                            <p id="discordStatus"></p>
-                            <p id="activities"></p></p>
+                            <div id="statusWrapper" class="offline">
+                                <p id="discordStatus"></p>
+                            </div>
+                            <p id="activities"></p>
                         </div>
                     </div> 
                 </div> 
