Improved the discord activity UI

--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
                             <div id="statusWrapper" class="offline">
                                 <p id="discordStatus"></p>
                             </div>
-                            <p id="activities"></p>
+                            <div id="discord">
+                                <div id="discordName" class="discordName">
+                                    <p>aridan<br>@actuallyaridan</p>
+                                </div>
+                                <div id="discordActivity" class="discordActivityHidden">
+                                    <p id="activities"></p>
+                                </div>
+                            </div>
                         </div>
                     </div> 
                 </div> 
