added loading spinner

--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
                 <div id="landyardDiscord">
                     <p>Discord activity</p>
                         <div id="loading">
-                            Loading Discord activity...
-                        </div>
+                            <div>
+                                <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+                            </div>
+                            </div>
                         <div id="loadedLandyard">
                             <div id="statusWrapper" class="offline">
                                 <p id="discordStatus"></p>
