--- a/mc.html
+++ b/mc.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div>
-                        <a href="src/downloads/Sweden.zip" download="Sweden.zip">
+                        <a href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
                             Download the Sweden pack
                           </a>
                     </div>
