--- a/mc.html
+++ b/mc.html
@@ -64,7 +64,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="mcBackground">
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
