--- a/mc.html
+++ b/mc.html
@@ -32,16 +32,18 @@
 
 </head>
 
-<body class="boxAlignment ">
+<body class="boxAlignment mcBackground">
     <header>
         <nav>
             <div class="navWrapper">
-                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton activeChoice" href="mc"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
@@ -51,12 +53,14 @@
                 <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="/"><img draggable="false" class="emoji" alt=""
+                <a class="navButton" href="/"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/house.svg"> Home</a>
                 <a class="navButton" href="experiences"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton activeChoice" href="mc"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
@@ -64,18 +68,18 @@
             </div>
         </nav>
     </header>
-    <main class="mcBackground">
+    <main class="mcFont">
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Home</h1>
+                    <h1 class="mcFont">Minecraft</h1>
                     <div class="centerer">
                         <div class="centererItems">
-                            <p>There will be more content here soon.</p>
+                            <p class="mcFont">There will be more content here soon.</p>
                         </div>
                     </div>
                     <div>
-                        <a href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
+                        <a class="mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
                             Download the Sweden pack
                           </a>
                     </div>
@@ -85,8 +89,8 @@
     </main>
     <footer>
         <div class="footer">
-            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+            <p class="mcFont" >© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+            <p class="mcFont">Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
         </div>
     </footer>
 </body>
