--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,8 @@
                         src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
+                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+                            src="src/images/emojis/speak.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
@@ -46,6 +48,8 @@
                         src="src/images/emojis/brain.svg"> Experiences</a>
                 <a class="navButton activeChoice" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
+                        <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
+                            src="src/images/emojis/speak.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
