--- a/mc.html
+++ b/mc.html
@@ -77,11 +77,13 @@
                         <div class="centererItems">
                             <p class="mcFont">There will be more content here soon.</p>
                         </div>
-                    </div>
-                    <div>
-                        <a class="mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
-                            Download the Sweden pack
-                          </a>
+                        <div>
+                            <p class="mcFont">Downloads</p>
+                            <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
+                                Download the Sweden Resource pack
+                              </a>
+                        </div>
+                        <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the <br>server, this is just if you want to use it on your own worlds)</p>
                     </div>
                 </div>
             </div>
@@ -89,8 +91,7 @@
     </main>
     <footer>
         <div class="footer">
-            <p class="mcFont" >© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
-            <p class="mcFont">Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+            <p class="mcFont" >© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.<br>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. <br>Font and background image are from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.</p>
         </div>
     </footer>
 </body>
