--- a/mc.html
+++ b/mc.html
@@ -78,6 +78,13 @@
                             <p class="mcFont">There will be more content here soon.</p>
                         </div>
                         <div>
+                            <p class="mcFont">Join the server</p>
+                            <p class="button dark mcFont">
+                                mc.aridan.net:25609
+                            </p>
+                        </div>
+                        <p class="mcFont subTitle">(for now, you have to add the port :25609 after the server address. <br>i'm working on having it removed)</p>
+                        <div>
                             <p class="mcFont">Downloads</p>
                             <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
                                 Download the Sweden Resource pack
