--- a/mc.html
+++ b/mc.html
@@ -43,7 +43,7 @@
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton activeChoice" href="mc"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Minecraft</a>
+                        src="src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton right-link" href="settings"><img draggable="false" class="emoji" alt=""
@@ -60,7 +60,7 @@
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
                 <a class="navButton activeChoice" href="mc"><img draggable="false" class="emoji" alt=""
-                        src="src/images/emojis/speak.svg"> Minecraft</a>
+                        src="src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton" href="settings"><img draggable="false" class="emoji" alt=""
