--- a/settings.html
+++ b/settings.html
@@ -30,7 +30,7 @@
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
                         <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/speak.svg"> Minecraft</a>
+                            src="src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton activeChoice right-link" href="settings"><img draggable="false" class="emoji" alt=""
@@ -47,7 +47,7 @@
                 <a class="navButton" href="projects"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/tools.svg"> Projects</a>
                         <a class="navButton" href="mc"><img draggable="false" class="emoji" alt=""
-                            src="src/images/emojis/speak.svg"> Minecraft</a>
+                            src="src/images/emojis/game.svg"> Minecraft</a>
                 <a class="navButton" href="contact"><img draggable="false" class="emoji" alt=""
                         src="src/images/emojis/speak.svg"> Contact</a>
                 <a class="navButton activeChoice" href="settings"><img draggable="false" class="emoji" alt=""
