--- a/mc.html
+++ b/mc.html
@@ -86,6 +86,8 @@
                         <p class="mcFont subTitle">(for now, you have to add the port :25609 after the server address. <br>i'm working on having it removed)</p>
                         <div>
                             <p class="mcFont">Downloads</p>
+                            <a class="button dark mcFont" href="src/downloads/aridan.net server modpack.zip" download="aridan.net server modpack.zip">
+                                Download the Modpack
                             <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
                                 Download the Sweden Resource pack
                               </a>
