--- a/mc.html
+++ b/mc.html
@@ -87,9 +87,9 @@
                         <div>
                             <p class="mcFont">Downloads</p>
                             <a class="button dark mcFont" href="src/downloads/aridan.net server modpack.zip" download="aridan.net server modpack.zip">
-                                Download the Modpack
+                                Download the aridan.net Modpack
                             <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
-                                Download the Sweden Resource pack
+                                Download the aridan.net Resource pack
                               </a>
                         </div>
                         <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the <br>server, this is just if you want to use it on your own worlds)</p>
