--- a/mc.html
+++ b/mc.html
@@ -86,7 +86,7 @@
                         <p class="mcFont subTitle">(for now, you have to add the port :25609 after the server address. <br>i'm working on having it removed)</p>
                         <div>
                             <p class="mcFont">Downloads</p>
-                            <a class="button dark mcFont" href="src/downloads/aridan.net server modpack.zip" download="aridan.net server modpack.zip">
+                            <a class="button dark mcFont" href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
                                 Download the aridan.net Modpack
                             <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
                                 Download the aridan.net Resource pack
