--- a/mc.html
+++ b/mc.html
@@ -80,10 +80,11 @@
                         <div>
                             <p class="mcFont">Join the server</p>
                             <p class="button dark mcFont">
-                                mc.aridan.net:25609
+                                Address: mc.aridan.net<br>
+                                Port (if on Bedrock): 25609
                             </p>
                         </div>
-                        <p class="mcFont subTitle">(for now, you have to add the port :25609 after the server address. <br>i'm working on having it removed)</p>
+                        <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to be able to build and similar)</p>
                         <div>
                             <p class="mcFont">Downloads</p>
                             <a class="button dark mcFont" href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
