--- a/mc.html
+++ b/mc.html
@@ -20,6 +20,7 @@
     <meta property="og:url" content="https://aridan.net">
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/settings.js"></script>
+    <script src="src/scripts/mcButtons.js"></script>
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
     <script src="src/scripts/landyard.js"></script>
@@ -74,26 +75,51 @@
                 <div>
                     <h1 class="mcFont">Minecraft</h1>
                     <div class="centerer">
-                        <div class="centererItems">
-                            <p class="mcFont">There will be more content here soon.</p>
+                        <div class="centerer">
+                            <p class="mcFont subTitle">Want to play on a Minecraft server where everyone treats everyone with respect, <br>where everyone helps each other and run a simple survival server without too many mods? <br>Look no further! Come join us! <br>The server is ran on Java, but we have a plugin that lets Bedrock players join too!</p>
+                            <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to grant you permissions to 
+                                build and similar)</p>
+                        </div>
+                        <div id="wrapperMc">
+                                <img class="imgWorld" src="src/images/world.png"
+                                    alt="A screenshot of the Minecraft world">
+
+                                <div id="mcJoinButtons">
+                                    <button id="javaButton" class="mc mcMenu green" onclick="showJava()">Java</button>
+                                    <button id="bedrockButton" class="mc mcMenu green" onclick="showBedrock()">Bedrock</button>
+                                </div>
+                                
+                                <div id="java" class="hide">
+                                    <p>To join on Java, use this:
+                                       <br> Address: mc.aridan.net
+                                    </p>
+                                </div>
+                                <div id="bedrock" class="hide">
+                                    <p>
+                                        To join on Bedrock, use this:
+                                        <br> Address: mc.aridan.net
+                                        <br> Port: 25609
+                                    </p>
+                                </div>
+
                         </div>
                         <div>
-                            <p class="mcFont">Join the server</p>
-                            <p class="button dark mcFont">
-                                Address: mc.aridan.net<br>
-                                Port (if on Bedrock): 25609
-                            </p>
-                        </div>
-                        <p class="mcFont subTitle">(you need to wait for an admin or the owner to join in order to be able to build and similar)</p>
-                        <div>
+                            <div id="admins">
+
+                            </div>
                             <p class="mcFont">Downloads</p>
-                            <a class="button dark mcFont" href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
+                            <div id="downloads">
+                                <a class="button dark mcFont"
+                                href="https://drive.google.com/file/d/101hYoVd5bSLjk3MSjTkL8ziZ4Qn1o066/view?usp=sharing">
                                 Download the aridan.net Modpack
-                            <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip" download="SwedenTweaks.zip">
-                                Download the aridan.net Resource pack
-                              </a>
+                                <a class="button dark mcFont" href="src/downloads/SwedenTweaks.zip"
+                                    download="SwedenTweaks.zip">
+                                    Download the aridan.net Resource pack
+                                </a>
+                            </div>
                         </div>
-                        <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the <br>server, this is just if you want to use it on your own worlds)</p>
+                        <p class="mcFont subTitle">(don't worry, your computer will download this when you enter the
+                            <br>server, this is just if you want to use it on your own worlds)</p>
                     </div>
                 </div>
             </div>
@@ -101,7 +127,9 @@
     </main>
     <footer>
         <div class="footer">
-            <p class="mcFont" >© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.<br>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. <br>Font and background image are from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.</p>
+            <p class="mcFont">© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT
+                license.<br>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0. <br>Font and background image are
+                from <a class="mcFont" href="https://faithfulpack.net/">Faithful</a>.</p>
         </div>
     </footer>
 </body>
